# src/api/widgetTemplates.ts
@@ -10,6 +10,13 @@ export interface WidgetTemplate {
   host_id: string;
 }
 
+
+export interface GenAi {
+  prompt: string;
+  template: string;
+  config: any;
+}
+
 export const getWidgetTemplates = async () => {
   const response = await api.get<WidgetTemplate[]>("/widget-templates/");
   return response.data;
@@ -27,6 +34,15 @@ export const createWidgetTemplate = async (
 ) => {
   const response = await api.post<WidgetTemplate>(
     "/widget-templates/",
+    templateData,
+  );
+  return response.data;
+};
+export const createGenAIReq = async (
+  templateData:any,
+) => {
+  const response = await api.post<GenAi>(
+    "/widget-templates/generate_template_with_ai",
     templateData,
   );
   return response.data;
